fix: white space on tags

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -130,6 +130,7 @@ h4 {
     background-color: var(--color-primary-50);
     color: var(--color-primary-500);
     font-size: var(--font-m);
+    white-space: nowrap;
   }
   &--green {
     border: 1px solid var(--color-green-400);
@@ -137,6 +138,7 @@ h4 {
     color: var(--color-green-500);
     font-size: var(--font-xs);
     padding: 0rem 0.7rem;
+    white-space: nowrap;
   }
   &--red {
     border: 1px solid var(--color-red-400);
@@ -144,6 +146,7 @@ h4 {
     color: var(--color-red-700);
     font-size: var(--font-xs);
     padding: 0rem 0.7rem;
+    white-space: nowrap;
   }
   &--warning {
     border: 1px solid var(--color-orange-500);
@@ -151,6 +154,7 @@ h4 {
     color: var(--color-orange-700);
     font-size: var(--font-xs);
     padding: 0rem 0.7rem;
+    white-space: nowrap;
   }
   &--info {
     border: 1px solid var(--color-slate-400);
@@ -158,6 +162,7 @@ h4 {
     color: var(--color-slate-700);
     font-size: var(--font-s);
     padding: 0rem 0.7rem;
+    white-space: nowrap;
   }
 }
 
